--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     </div>
     <!-- alt is for if image could not show up -->
     <img id="image" alt=""src=""/>
+    
+    <select>
+      <option>Yes</option>
+      <option>No</option>
+    </select>
 
   </body>
 
