--- a/index.html
+++ b/index.html
@@ -4,38 +4,66 @@
   <head>
     <meta charset="utf-8">
     <title>
-      This is a github workshop.
+      Khuong Tiet.
     </title>
     <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
-    <p>This is a paragraph</p>
-    <h1>This is a h1</h1>
-    <h1 id="anotherh1"> hello test </h1>
-    <h1 id="anotherh1"> test #2 </h1>
-    <div id="thisisadiv">
+    <header>
+      <div id = "header-content">
+        <h1><a href="#">Khuong Tiet</a></h1>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+
+      </div>
+    </header>
+
+    <div id = "banner">
     </div>
+
+    <div id = "content">
+      <p>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+      </p>
+    </div>
+
     <button type="button" name="button">Yo this is a button</button>
     <a href="https://google.com">this is a link to google</a>
     <h1><a href="https://yahoo.com">link to lame yahoo</a></h1>
     <!-- "_blank" makes it in a new tab -->
+
     <a target="_blank" href="http://purple.com"><div id="purple"></div></a>
 
-    <h2>This is the title of our blog</h2>
-    <div class="blog">
-      <select>
-        <option>Yes</option>
-        <option>No</option>
-      </select>
-      <h3>this is blog1</h3>
-    </div>
-
-    <div class="blog">
-      <h3>this is blog2</h3>
-    </div>
     <!-- alt is for if image could not show up -->
     <img id="image" alt=""src=""/>
+
 
   </body>
 
