--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <nav>
           <ul>
             <li><a href="#">Home</a></li>
+            <li><a href="#">SGSearch</a></li>
+            <li><a href="#">Resume</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
