Added link for SGSearch

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
           <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">SGSearch</a></li>
+            <li><a href="/sgsearch.html">SGSearch</a></li>
             <li><a href="#">Resume</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
