Added organizational folder, updated resume link with actual resume

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>
       Khuong Tiet.
     </title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
 
   <body>
@@ -17,7 +17,7 @@
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="/sgsearch.html">SGSearch</a></li>
-            <li><a href="#">Resume</a></li>
+            <li><a href="/pdf/resume.pdf">Resume</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
