--- a/sgsearch.html
+++ b/sgsearch.html
@@ -29,7 +29,7 @@
 
   <div id = "champions">
     <ul>
-        <li><a class="champIcon" id="Aatrox" href=javascript:void(0) onclick="clicked();"><img src=./js/data-dragon/7.1.1/img/champion/Aatrox.png></a></li>
+        <li><a class="champIcon" id="Aatrox" href=javascript:void(0) onclick="clicked(this.id);"><img src=./js/data-dragon/7.1.1/img/champion/Aatrox.png></a></li>
         <li><a class="champIcon" id="Ahri" href="#Ahri"><img src=./js/data-dragon/7.1.1/img/champion/Ahri.png></a></li>
         <li><a class="champIcon" id="Akali" href="#Akali"><img src=./js/data-dragon/7.1.1/img/champion/Akali.png></a></li>
         <li><a class="champIcon" id="Alistar" href="#Alistar"><img src=./js/data-dragon/7.1.1/img/champion/Alistar.png></a></li>
