--- a/contact.html
+++ b/contact.html
@@ -11,23 +11,29 @@
       <div id = "header-content">
         <ul class="topnav" id ="headerTopNav">
           <li><a href="./index.html">Home</a></li>
-          <li><a href=./sgsearch.html>SGSearch</a></li>
-          <li><a target="_blank" href=./pdf/Resume.pdf>Resume</a></li>
+          <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Projects</a>
+            <div class="dropdown-content">
+              <a href=./sgsearch.html>SGSearch</a>
+              <a href=#WIP>WIP</a>
+              <a href=#WIP2>WIP</a>
+            </div>
+          </li>
+          <li><a href=./pdf/Resume.pdf>Resume</a></li>
           <li><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
     </header>
-    <br>
-    <br>
-    <br>
+
+    <div id="content">
     <h1>
       Khuong Tiet
     </h1>
-    <br>
-    <br>
-    <br>
+    </div>
+    <div id="content">
     <h1>
       ktiet1@uci.edu
     </h1>
+    </div>
   </body>
 </html>
