--- a/contact.html
+++ b/contact.html
@@ -9,19 +9,6 @@
   <body>
     <header>
       <div id = "header-content">
-        <ul class="topnav" id ="headerTopNav">
-          <li><a href="./index.html">Home</a></li>
-          <li class="dropdown">
-            <a href="javascript:void(0)" class="dropbtn">Projects</a>
-            <div class="dropdown-content">
-              <a href=./sgsearch.html>SGSearch</a>
-              <a href=#WIP>WIP</a>
-              <a href=#WIP2>WIP</a>
-            </div>
-          </li>
-          <li><a href=./pdf/Resume.pdf>Resume</a></li>
-          <li><a href="./contact.html">Contact</a></li>
-        </ul>
       </div>
     </header>
 
@@ -35,5 +22,7 @@
       ktiet1@uci.edu
     </h1>
     </div>
+
+    <script src="js/navigation.js"></script>
   </body>
 </html>
