--- a/index.html
+++ b/index.html
@@ -13,20 +13,8 @@
     <header>
 
       <div id = "header-content">
-        <ul class="topnav" id ="headerTopNav">
-          <li><a href="./index.html">Home</a></li>
-          <li class="dropdown">
-            <a href="javascript:void(0)" class="dropbtn">Projects</a>
-            <div class="dropdown-content">
-              <a href=./sgsearch.html>SGSearch</a>
-              <a href=#WIP>WIP</a>
-              <a href=#WIP2>WIP</a>
-            </div>
-          </li>
-          <li><a href=./pdf/Resume.pdf>Resume</a></li>
-          <li><a href="./contact.html">Contact</a></li>
-        </ul>
       </div>
+      
     </header>
 
     <div id = "banner">
@@ -87,7 +75,7 @@
     <!-- alt is for if image could not show up -->
     <img id="image" alt=""src=""/>
 
-
+    <script src="js/navigation.js"></script>
   </body>
 
 </html>
