--- a/sgsearch.html
+++ b/sgsearch.html
@@ -12,19 +12,6 @@
   <header>
 
     <div id = "header-content">
-      <ul class="topnav" id ="headerTopNav">
-        <li><a href="./index.html">Home</a></li>
-        <li class="dropdown">
-          <a href="javascript:void(0)" class="dropbtn">Projects</a>
-          <div class="dropdown-content">
-            <a href=./sgsearch.html>SGSearch</a>
-            <a href=#WIP>WIP</a>
-            <a href=#WIP2>WIP</a>
-          </div>
-        </li>
-        <li><a href=./pdf/Resume.pdf>Resume</a></li>
-        <li><a href="./contact.html">Contact</a></li>
-      </ul>
     </div>
   </header>
 
@@ -176,6 +163,7 @@
 </div>
 
 <script src="js/search.js"></script>
+<script src="js/navigation.js"></script>
 
 
 
