--- a/choose.html
+++ b/choose.html
@@ -1,3 +1,20 @@
+/*
+Choose Specifications
+
+Takes one to two locations (Expand to 4 once settled)
+From these locations, finds a restaurant close to both
+
+Search parameters
+based on stars
+type of food
+money
+
+All will be drop down menus/clickable icons
+
+*later implement a search bar, but for now leave nothing to user
+
+*/
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,10 +27,13 @@
 
 <body>
   <header>
-
     <div id = "header-content">
     </div>
   </header>
+
+  <div id="test">
+    <h1>WIP</h1>
+  </div>
 
 <script src="js/navigation.js"></script>
 </body>
