--- a/contact.html
+++ b/contact.html
@@ -5,23 +5,27 @@
     <title>Contact</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
+  <header>
+    <div id = "header-content"></div>
+  </header>
 
   <body>
-    <header>
-      <div id = "header-content">
-      </div>
-    </header>
 
-    <div id="content">
-    <h1>
-      Khuong Tiet
-    </h1>
+    <div class="contactInfo">
+      <div id="page">
+        <h1>
+          Khuong Tiet
+        </h1>
+      </div>
+
+      <div id="page">
+        <h1>
+          ktiet1@uci.edu
+        </h1>
+      </div>
+
     </div>
-    <div id="content">
-    <h1>
-      ktiet1@uci.edu
-    </h1>
-    </div>
+
 
     <script src="js/navigation.js"></script>
   </body>
