--- a/index.html
+++ b/index.html
@@ -24,45 +24,15 @@
     </div>
 
     <div id = "content">
-      <p>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <h1>
-          Hello, and welcome!
-        </h1>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <h1>
-          There's not much here yet, but check back soon!
-        </h1>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-      </p>
+      <div class = "landing">
+        <div id = "page">
+          <h1> Hello, and welcome! </h1>
+        </div>
+
+        <div id="page">
+          <h1> There's not much here yet, but check back soon! </h1>
+        </div>
+      </div>
     </div>
 
     <!-- "_blank" makes it in a new tab -->
