--- a/accelr/index.html
+++ b/accelr/index.html
@@ -11,7 +11,7 @@
   <body>
     <center>
       <div>
-        <h1>Game Title</h1>
+        <h1>accelr</h1>
         <canvas id="canvas" oncontextmenu="event.preventDefault()"></canvas>
         <canvas id="loadingCanvas" oncontextmenu="event.preventDefault()" width="800" height="600"></canvas>
       </div>
