changed 'choose' to WIP page

--- a/choose.html
+++ b/choose.html
@@ -1,26 +1,9 @@
-/*
-Choose Specifications
-
-Takes one to two locations (Expand to 4 once settled)
-From these locations, finds a restaurant close to both
-
-Search parameters
-based on stars
-type of food
-money
-
-All will be drop down menus/clickable icons
-
-*later implement a search bar, but for now leave nothing to user
-
-*/
-
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
   <title>
-    Find a Place to Eat!
+    PLACEHOLDER
   </title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
