--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div>
     </div>
 
-   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
    <script src="js/main.js"></script>
   </body>
 
