made slightly responsive, ignored old files

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
       Khuong Tiet
     </title>
@@ -13,10 +14,10 @@
       <div id="utility-bar">
         <ul>
           <li>
-            <a class="utility-icon" href="https://www.google.com"><img src=./img/search-icon.png></a>
+            <a class="utility-icon" href="https://www.google.com"><img class="icon" src=./img/search-icon.png></a>
           </li>
           <li>
-            <a class="utility-icon" href="https://github.com/khuongTiet"><img src=./img/github-icon.png></a>
+            <a class="utility-icon" href="https://github.com/khuongTiet"><img class="icon" src=./img/github-icon.png></a>
           </li>
         </ul>
       </div>
@@ -32,7 +33,7 @@
       <div id="main-content">
 
         <div id="education" class="subsection">
-          <a class="subsection-icon" href="#education"><img src=./img/education-icon.png></a>
+          <a class="subsection-icon" href="#education"><img class="icon" src=./img/education-icon.png></a>
           <h2>Education</h2>
           <div id="school" class="info">
             <div class="info-head"> University of California, Irvine </div>
@@ -60,13 +61,14 @@
         </div>
 
         <div id="experience" class="subsection">
-          <a class="subsection-icon" href="#experience"><img src=./img/work-icon.png></a>
+          <a class="subsection-icon" href="#experience"><img class="icon" src=./img/work-icon.png></a>
           <h2>Experience</h2>
           <div class="info">
             <div class="info-head"> The Portal </div>
             <div class="info-detail">
               The Portal is a start up based in Irvine that focuses on preparing students for the industry. Student get to work on client projects while learning technologies used in the field.
             </div>
+            <br />
           </div>
           <div class="subsection-p">
             Worked using React, Express, and Postgres
@@ -77,6 +79,7 @@
             <div class="info-detail">
               Delphi Display Systems is a computer software and hardware company based in Costa Mesa that designs and builds signage and display systems for companies.
             </div>
+            <br />
           </div>
           <div class="subsection-p">
               Wrote scripts to automate testing of software using Selenium with Python
@@ -84,13 +87,14 @@
         </div>
 
         <div id="experience" class="subsection">
-          <a class="subsection-icon" href="#experience"><img src=./img/extra-icon.png></a>
+          <a class="subsection-icon" href="#experience"><img class="icon" src=./img/extra-icon.png></a>
           <h2>Extracurricular</h2>
           <div class="info">
             <div class="info-head"> Med App Jam </div>
             <div class="info-detail">
               Med App Jam is a two week long collaboartive event in which students from both the software and medical schools collaborate to create a medical focused application
             </div>
+            <br />
           </div>
           <div class="subsection-p">
             Lorizzle stuff dolizzle yippiyo amizzle, crazy fizzle elit. Nullizzle sapizzle velizzle, the bizzle volutpizzle, suscipit quis, gravida vizzle, break it down. I saw beyonces tizzles and my pizzle went crizzle break yo neck, yall tortor. Mofo shizzle my nizzle crocodizzle. Own yo' at dolizzle dapibus rizzle tempizzle away. Maurizzle pellentesque nibh izzle turpis. Vestibulum izzle stuff. Pellentesque fo shizzle my nizzle rhoncizzle dang. In crunk sheezy that's the shizzle dictumst. Donec fo shizzle. Curabitizzle tellizzle you son of a bizzle, pretizzle shiz, mattizzle ac, eleifend vitae, nunc. Stuff suscipit. Integer da bomb dawg sed purizzle.
@@ -100,10 +104,6 @@
   Nunc quizzle arcu. Fo shizzle my nizzle ante. Maecenizzle pot rizzle izzle break yo neck, yall. Ghetto izzle pimpin'. Cras id shit ut dizzle phat condimentum. Break it down we gonna chung my shizz sit fizzle, consectetizzle adipiscing bizzle. Curabitur elizzle shizzle my nizzle crocodizzle, elementum that's the shizzle, eleifend izzle, mollizzle hizzle, pot. Bling bling volutpat. Donizzle gangster cool turpizzle. Suspendisse shizznit. Crizzle shit urna, nizzle izzle, fo shizzle mah nizzle fo rizzle, mah home g-dizzle vitae, cool hizzle, sapizzle. Praesent sem orci, shit nizzle, gizzle id, commodo izzle, break it down.
 
   Praesent dignissim crazy ghetto justo i'm in the shizzle molestie. The bizzle ligula mi, dapibizzle gizzle, lobortis fo shizzle, uhuh ... yih! at, nisl. Sed blandizzle. Suspendisse brizzle. Sizzle nulla erat, ass shit, bibendum nizzle, bibendizzle at, dolor. Suspendisse sizzle mofo. Maecenizzle get down get down tortizzle. Cras izzle i'm in the shizzle. Vestibulum consequat. Donizzle black for sure i'm in the shizzle arcu. That's the shizzle a ghetto vizzle sem eleifend stuff. We gonna chung ghetto, gangster non vestibulizzle mah nizzle, neque libero get down get down fo shizzle my nizzle, vehicula shizznit augue nunc lacinia pede. Quisque uhuh ... yih! sodalizzle dolor. Aliquam fo shizzle volutpizzle. Ma nizzle sagittizzle, dui izzle ultricies consequizzle, break it down lacizzle gravida elit, at sagittis enim crunk sizzle nibh.
-
-  Nulla eu daahng dawg. Aliquizzle porta break it down i saw beyonces tizzles and my pizzle went crizzle. Crazy owned, sapizzle tellivizzle dizzle ghetto, libero fo shizzle mah nizzle fo rizzle, mah home g-dizzle hendrerizzle leo, non that's the shizzle nunc shiz izzle check it out. Donizzle eu dolor. Break yo neck, yall quis felis. Sed mofo faucibizzle pimpin'. I saw beyonces tizzles and my pizzle went crizzle bizzle bling bling, volutpat tellivizzle, volutpat cool, own yo' bling bling, check out this. Phat break it down. Nunc shizzlin dizzle. Phat sit amizzle mammasay mammasa mamma oo sa nizzle bow wow wow blandizzle dignissim. Quisque doggy tellizzle dang fo enim. Izzle fizzle dignissim fo shizzle.
-
-  Doggy crunk. Suspendisse gizzle. Maecenizzle my shizz. Etizzle elizzle ante, its fo rizzle quizzle, ullamcorper izzle, scelerisque izzle, ass. Morbi things its fo rizzle. Dizzle felizzle. Fizzle nonummy, gangsta vitae fringilla cursizzle, check it out mi crunk felizzle, sizzle away we gonna chung enizzle shizzle my nizzle crocodizzle yo mamma. Shizzlin dizzle things fo shizzle vizzle crackalackin. Fusce bibendum dolor bizzle shizznit. Cras placerat, gangsta vizzle for sure lacinia, lorem break it down pharetra tortizzle, dizzle luctizzle fo shizzle est own yo' est.
           </div>
 
         </div>
